--- a/Services.html
+++ b/Services.html
@@ -13,7 +13,7 @@
     </header>
     
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="About.html">About</a>
         <a href="#">Services</a>
         <a href="Contact.html">Contact</a>
