--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
     <main>
         <section class="main-container">
             <h2 class="main-title">Main Content</h2>
-            <p class="main-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, laboriosam.</p>
-            <a href="#" class="main-btn">Read More</a>
+            <p class="main-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, laboriosam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi ducimus qui, ab ratione modi rem autem maiores repudiandae et aut! Voluptatum id aliquid quibusdam iure sunt quisquam fuga ea velit. Excepturi, temporibus qui incidunt blanditiis nemo sed repellat expedita eligendi harum ipsam dolore a minima corporis minus, soluta neque quaerat!</p>
+            <input type="checkbox" id="readmore" class="readmore">
+            <div class="moretext">
+                <p>This is the extended content that will be shown when you click Read More. You can add more information about your website here.</p>
+            </div>
+            <label for="readmore" class="readmore-label">Read More</label>
+
         </section>
     </main>
 
