--- a/About.html
+++ b/About.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,9 +24,44 @@
         <section class="about-container">
             <h2 class="about-title">About</h2>
             <p class="about-info">(Test naaa eiei)Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, fugiat!</p>
-            <a href="" class="about-btn">Read More</a>
+            <!-- <a href="" class="about-btn">Read More</a> -->
+             <input type="checkbox" id="readmore" class="readmore">
+            <div class="moretext">
+                <p>(เว็บ 2)This is the extended content that will be shown when you click Read More. You can add more information about your website here.</p>
+            </div>
+            <label for="readmore" class="readmore-label">Read More</label>
         </section>
+        
+        <h2 style="text-align: center;" class="tobtang1" >ประวัติทั้งหมด</h2>
+        <div class="tobtang" class="accordion-container">
+            
+            <div class="accordion">
+                <input type="checkbox" name="accordion" id="q1" checked>
+                <label for="q1">ประวัติส่วนตัว</label>
+                <div class="content">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, odit.</p>
+                </div>
+            </div>
+
+            <div class="accordion">
+                <input type="checkbox" name="accordion" id="q2" >
+                <label for="q2">ประวัติการศึกษา</label>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, tenetur.</p>
+                </div>
+            </div>
+
+            <div class="accordion">
+                <input type="checkbox" name="accordion" id="q3">
+                <label for="q3">ประวัติการทำงาน</label>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam.</p>
+                </div>
+            </div>
+
+        </div>
     </main>
+
 
 </body>
 </html>
